Fix text-align bug

--- a/css/components/projects-styles.css
+++ b/css/components/projects-styles.css
@@ -72,7 +72,7 @@
     transform: rotate(180deg);
 }
 
-.project-two h1, p {
+.project-two h1, .project-two p {
     text-align: center;
 }
 
